<resources>
    <string name="app_name">Inventory</string>

    <!-- Label for dropdown menu option if the size is unknown[CHAR LIMIT=20] -->
    <string name="size_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the size is 5[CHAR LIMIT=20] -->
    <string name="size_five">5</string>

    <!-- Label for dropdown menu option if the size is 6[CHAR LIMIT=20] -->
    <string name="size_six">6</string>

    <!-- Label for dropdown menu option if the size is 7[CHAR LIMIT=20] -->
    <string name="size_seven">7</string>

    <!-- Label for dropdown menu option if the size is 8 [CHAR LIMIT=20] -->
    <string name="size_eight">8</string>

    <!-- Label for dropdown menu option if the size is 7[CHAR LIMIT=20] -->
    <string name="size_nine">9</string>

    <!-- Label for dropdown menu option if the size is 10 [CHAR LIMIT=20] -->
    <string name="size_ten">10</string>

    <!-- Label for dropdown menu option if the size is 11[CHAR LIMIT=20] -->
    <string name="size_eleven">11</string>

    <!-- Label for dropdown menu option if the size is 12[CHAR LIMIT=20] -->
    <string name="size_twelve">12</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Inventory</string>

    <!-- Label for editor menu option to save shoes and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current inventory  [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Title for the activity to add new inventory [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_inventory">Add Inventory/Product Detail</string>

    <!-- Title for the activity to edit existing inventory [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_inventory">Edit Inventory</string>

    <!-- Toast message in editor when a new inventory item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_successful">Inventory item saved</string>

    <!-- Toast message in editor when a new inventory item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_failed">Error with saving inventory item</string>

    <!-- Toast message in editor when current inventory item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_inventory_successful">Inventory updated</string>

    <!-- Toast message in editor when current inventory has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_inventory_failed">Error with updating inventory</string>

    <!-- Toast message in editor when the current inventory item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_successful">Inventory deleted</string>

    <!-- Toast message in editor when current inventory has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_inventory_failed">Error with deleting inventory</string>

    <!-- Toast message in editor when style isn't specified[CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_style">Please specify style</string>

    <!-- Toast message in editor when brand isn't specified[CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_brand">Please specify brand</string>

    <!-- Toast message in editor when price isn't specified[CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_price">Please specify price</string>

    <!-- Toast message in editor when quantity isn't specified[CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_quantity">Please specify quantity</string>

    <!-- Toast message in editor when image isn't specified[CHAR LIMIT=NONE] -->
    <string name="editor_insert_inventory_image">Please include image</string>

    <!-- Dialog message to ask the user to confirm deleting the current inventory item[CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this inventory item?</string>

    <!-- Dialog button text for the option to confirm deleting the current inventory item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current inventory item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Label for the editor activity shopping cart [CHAR LIMIT=20] -->
    <string name="shopping_cart">Shopping cart</string>

    <!-- Label for the Edit Text style input [CHAR LIMIT=20] -->
    <string name="style">Style</string>

    <!-- Label for the Edit Text brand input [CHAR LIMIT=20] -->
    <string name="brand">Brand</string>

    <!-- Label for the Edit Text size input [CHAR LIMIT=20] -->
    <string name="size">Size</string>

    <!-- Label for the Edit Text price input [CHAR LIMIT=20] -->
    <string name="price">Price</string>

    <!-- Label for the Edit Text quantity input [CHAR LIMIT=20] -->
    <string name="quantity">Quantity</string>

    <!-- Label for the image button [CHAR LIMIT=20] -->
    <string name="add_an_image">Add An Image</string>

    <!-- Label for the order button [CHAR LIMIT=20] -->
    <string name="order_more">Order More</string>

    <!-- Label for the receive button [CHAR LIMIT=20] -->
    <string name="receive">Receive</string>

    <!-- Label for the sale button in the Editor Activity [CHAR LIMIT=20] -->
    <string name="sale">Sale</string>

    <!-- Label for the empty view text in the Main Activity [CHAR LIMIT=20] -->
    <string name="oops_there_are_currently_no_shoes_in_here">Oops! There are currently no shoes in here!</string>

    <!-- Label for the instructions in the Main Activity [CHAR LIMIT=20] -->
    <string name="start_adding_by_clicking_the_button_below">Start adding by clicking the button below.</string>

    <!-- Label for the sell button in the Main Activity [CHAR LIMIT=20] -->
    <string name="sell">Sell</string>

    <!-- Label for the inventory name if the name isn't specified [CHAR LIMIT=20] -->
    <string name="name_specify">Name not specified</string>

</resources>
